--- a/jobs/page4.html
+++ b/jobs/page4.html
@@ -161,6 +161,27 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://www.themuse.com/jobs/themuse/qa-lead-335af6">The  Muse (YC W12) Is Hiring a QA Lead – Help 50M People Find Career Alignment</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17063678">None comments</a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=KMinshew">KMinshew</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1526284890"
+                                       class="submissionTimestamp">2018-05-14 08:01:30</a> &nbsp;•&nbsp;
+                                    1 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://voiceops.com/careers.html">VoiceOps is hiring engineers and success managers to build AI for B2B voice data</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -168,7 +189,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17062493">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dariaevdo">dariaevdo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526269101"
                                        class="submissionTimestamp">2018-05-14 03:38:21</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -189,7 +210,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17061454">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=TheEzEzz">TheEzEzz</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526251926"
                                        class="submissionTimestamp">2018-05-13 22:52:06</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -210,7 +231,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17060100">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=shk">shk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526234475"
                                        class="submissionTimestamp">2018-05-13 18:01:15</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -231,7 +252,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17058668">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thedogeye">thedogeye</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526216235"
                                        class="submissionTimestamp">2018-05-13 12:57:15</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -252,7 +273,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17057875">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jayzee">jayzee</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526199615"
                                        class="submissionTimestamp">2018-05-13 08:20:15</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -273,7 +294,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17057277">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=yunhakim">yunhakim</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526183272"
                                        class="submissionTimestamp">2018-05-13 03:47:52</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -294,7 +315,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17056745">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ayw">ayw</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526170806"
                                        class="submissionTimestamp">2018-05-13 00:20:06</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -315,7 +336,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17055704">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=nimz">nimz</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526154740"
                                        class="submissionTimestamp">2018-05-12 19:52:20</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -336,7 +357,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17054660">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hinting">hinting</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526140890"
                                        class="submissionTimestamp">2018-05-12 16:01:30</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -357,7 +378,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17053455">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=arram">arram</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526122607"
                                        class="submissionTimestamp">2018-05-12 10:56:47</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -378,7 +399,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17052841">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=cdrux">cdrux</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526107925"
                                        class="submissionTimestamp">2018-05-12 06:52:05</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -399,7 +420,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17052323">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=iEchoic">iEchoic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526095460"
                                        class="submissionTimestamp">2018-05-12 03:24:20</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -420,7 +441,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17051510">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Debkishore">Debkishore</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526082163"
                                        class="submissionTimestamp">2018-05-11 23:42:43</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -441,7 +462,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17050402">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=coltonv">coltonv</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526068794"
                                        class="submissionTimestamp">2018-05-11 19:59:54</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -462,7 +483,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17049014">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=the_economist">the_economist</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526058544"
                                        class="submissionTimestamp">2018-05-11 17:09:04</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -483,7 +504,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17048048">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=justin">justin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526052727"
                                        class="submissionTimestamp">2018-05-11 15:32:07</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -504,7 +525,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17046008">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=DesaiAshu">DesaiAshu</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526031952"
                                        class="submissionTimestamp">2018-05-11 09:45:52</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -525,7 +546,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17045332">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=alooPotato">alooPotato</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526020041"
                                        class="submissionTimestamp">2018-05-11 06:27:21</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -546,29 +567,8 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17044674">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=leelin">leelin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526007298"
                                        class="submissionTimestamp">2018-05-11 02:54:58</a> &nbsp;•&nbsp;
-                                    1 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="http://www.irisonboard.com/careers/">Iris Automation Is Hiring Engineers – AI Collision Avoidance for Drones</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17043697">None comments</a> &nbsp;•&nbsp;
-                                    <strong><a
-                                            href="https://news.ycombinator.com/user?id=aharm">aharm</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
-                                       class="submissionTimestamp">2018-05-10 23:13:22</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -614,8 +614,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
