--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -190,7 +190,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16585892">517 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kgwgk">kgwgk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521044797"
                                        class="submissionTimestamp">2018-03-14 16:26:37</a> &nbsp;•&nbsp;
                                     1211 points
                                 </span>
@@ -211,7 +211,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17094213">270 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526582705"
                                        class="submissionTimestamp">2018-05-17 18:45:05</a> &nbsp;•&nbsp;
                                     1209 points
                                 </span>
@@ -232,7 +232,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16613996">268 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=obtino">obtino</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521403563"
                                        class="submissionTimestamp">2018-03-18 20:06:03</a> &nbsp;•&nbsp;
                                     1155 points
                                 </span>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16668254">100 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=primogen">primogen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521918326"
                                        class="submissionTimestamp">2018-03-24 19:05:26</a> &nbsp;•&nbsp;
                                     1149 points
                                 </span>
@@ -274,7 +274,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17075489">489 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526403827"
                                        class="submissionTimestamp">2018-05-15 17:03:47</a> &nbsp;•&nbsp;
                                     1087 points
                                 </span>
@@ -295,7 +295,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16633774">629 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521588274"
                                        class="submissionTimestamp">2018-03-20 23:24:34</a> &nbsp;•&nbsp;
                                     1086 points
                                 </span>
@@ -316,7 +316,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17066846">366 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=AJRF">AJRF</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526315470"
                                        class="submissionTimestamp">2018-05-14 16:31:10</a> &nbsp;•&nbsp;
                                     1075 points
                                 </span>
@@ -337,7 +337,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16898827">322 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=passenger">passenger</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524434203"
                                        class="submissionTimestamp">2018-04-22 21:56:43</a> &nbsp;•&nbsp;
                                     1075 points
                                 </span>
@@ -358,7 +358,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16623835">395 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=aaronbrethorst">aaronbrethorst</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521498221"
                                        class="submissionTimestamp">2018-03-19 22:23:41</a> &nbsp;•&nbsp;
                                     1074 points
                                 </span>
@@ -379,7 +379,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16772276">256 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=anakic">anakic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1523012065"
                                        class="submissionTimestamp">2018-04-06 10:54:25</a> &nbsp;•&nbsp;
                                     1053 points
                                 </span>
@@ -400,7 +400,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16914698">284 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524591279"
                                        class="submissionTimestamp">2018-04-24 17:34:39</a> &nbsp;•&nbsp;
                                     1048 points
                                 </span>
@@ -421,7 +421,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16577714">309 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=schoen">schoen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1520961252"
                                        class="submissionTimestamp">2018-03-13 17:14:12</a> &nbsp;•&nbsp;
                                     1024 points
                                 </span>
@@ -442,7 +442,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16939619">314 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=YeGoblynQueenne">YeGoblynQueenne</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524823652"
                                        class="submissionTimestamp">2018-04-27 10:07:32</a> &nbsp;•&nbsp;
                                     1022 points
                                 </span>
@@ -463,7 +463,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16541415">220 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rpledge">rpledge</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1520471056"
                                        class="submissionTimestamp">2018-03-08 01:04:16</a> &nbsp;•&nbsp;
                                     1018 points
                                 </span>
@@ -484,7 +484,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16922396">544 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=DoreenMichele">DoreenMichele</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524670064"
                                        class="submissionTimestamp">2018-04-25 15:27:44</a> &nbsp;•&nbsp;
                                     1015 points
                                 </span>
@@ -505,7 +505,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16980292">367 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=antoinefink">antoinefink</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525288857"
                                        class="submissionTimestamp">2018-05-02 19:20:57</a> &nbsp;•&nbsp;
                                     999 points
                                 </span>
@@ -526,7 +526,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17102981">143 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ChanningAllen">ChanningAllen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526662548"
                                        class="submissionTimestamp">2018-05-18 16:55:48</a> &nbsp;•&nbsp;
                                     985 points
                                 </span>
@@ -544,12 +544,12 @@
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17189905">460 comments</a> &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17189905">462 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Mahn">Mahn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527702803"
                                        class="submissionTimestamp">2018-05-30 17:53:23</a> &nbsp;•&nbsp;
-                                    974 points
+                                    976 points
                                 </span>
                             </td>
                         </tr>
@@ -568,7 +568,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17138356">530 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=drexlspivey">drexlspivey</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527110011"
                                        class="submissionTimestamp">2018-05-23 21:13:31</a> &nbsp;•&nbsp;
                                     972 points
                                 </span>
@@ -589,7 +589,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16654698">595 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=cft">cft</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521773352"
                                        class="submissionTimestamp">2018-03-23 02:49:12</a> &nbsp;•&nbsp;
                                     947 points
                                 </span>
@@ -640,8 +640,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
