--- a/top_stories/daily/page2.html
+++ b/top_stories/daily/page2.html
@@ -190,7 +190,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17036221">264 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ryan_j_naughton">ryan_j_naughton</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525924010"
                                        class="submissionTimestamp">2018-05-10 03:46:50</a> &nbsp;•&nbsp;
                                     915 points
                                 </span>
@@ -211,7 +211,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16997272">384 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ndiscussion">ndiscussion</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525460392"
                                        class="submissionTimestamp">2018-05-04 18:59:52</a> &nbsp;•&nbsp;
                                     910 points
                                 </span>
@@ -232,7 +232,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16796127">243 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=TD-Linux">TD-Linux</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1523301968"
                                        class="submissionTimestamp">2018-04-09 19:26:08</a> &nbsp;•&nbsp;
                                     909 points
                                 </span>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16959188">435 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dirtyaura">dirtyaura</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525101015"
                                        class="submissionTimestamp">2018-04-30 15:10:15</a> &nbsp;•&nbsp;
                                     904 points
                                 </span>
@@ -274,7 +274,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16698932">287 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=zapita">zapita</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522253490"
                                        class="submissionTimestamp">2018-03-28 16:11:30</a> &nbsp;•&nbsp;
                                     898 points
                                 </span>
@@ -295,7 +295,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16912679">343 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jstanley">jstanley</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524578911"
                                        class="submissionTimestamp">2018-04-24 14:08:31</a> &nbsp;•&nbsp;
                                     895 points
                                 </span>
@@ -316,7 +316,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17057596">240 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526192686"
                                        class="submissionTimestamp">2018-05-13 06:24:46</a> &nbsp;•&nbsp;
                                     892 points
                                 </span>
@@ -337,9 +337,9 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17184054">451 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wei_jok">wei_jok</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527641541"
                                        class="submissionTimestamp">2018-05-30 00:52:21</a> &nbsp;•&nbsp;
-                                    882 points
+                                    883 points
                                 </span>
                             </td>
                         </tr>
@@ -358,7 +358,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16975096">593 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=muszc-master">muszc-master</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525250907"
                                        class="submissionTimestamp">2018-05-02 08:48:27</a> &nbsp;•&nbsp;
                                     874 points
                                 </span>
@@ -379,7 +379,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16818593">295 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lnguyen">lnguyen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1523516239"
                                        class="submissionTimestamp">2018-04-12 06:57:19</a> &nbsp;•&nbsp;
                                     874 points
                                 </span>
@@ -400,7 +400,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17099484">799 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=grabeh">grabeh</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526630342"
                                        class="submissionTimestamp">2018-05-18 07:59:02</a> &nbsp;•&nbsp;
                                     863 points
                                 </span>
@@ -421,7 +421,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16601883">562 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=samaysharma">samaysharma</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521218832"
                                        class="submissionTimestamp">2018-03-16 16:47:12</a> &nbsp;•&nbsp;
                                     827 points
                                 </span>
@@ -442,7 +442,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16437973">391 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=minimaxir">minimaxir</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1519311854"
                                        class="submissionTimestamp">2018-02-22 15:04:14</a> &nbsp;•&nbsp;
                                     803 points
                                 </span>
@@ -463,7 +463,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16768021">158 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=seycombi">seycombi</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522955471"
                                        class="submissionTimestamp">2018-04-05 19:11:11</a> &nbsp;•&nbsp;
                                     801 points
                                 </span>
@@ -484,7 +484,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16550270">167 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=zdw">zdw</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1520580140"
                                        class="submissionTimestamp">2018-03-09 07:22:20</a> &nbsp;•&nbsp;
                                     792 points
                                 </span>
@@ -505,7 +505,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17181269">212 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=HoppedUpMenace">HoppedUpMenace</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527615386"
                                        class="submissionTimestamp">2018-05-29 17:36:26</a> &nbsp;•&nbsp;
                                     789 points
                                 </span>
@@ -526,7 +526,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17097561">116 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rreichman">rreichman</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526603032"
                                        class="submissionTimestamp">2018-05-18 00:23:52</a> &nbsp;•&nbsp;
                                     784 points
                                 </span>
@@ -547,7 +547,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16813796">688 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=navigaid">navigaid</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1523470190"
                                        class="submissionTimestamp">2018-04-11 18:09:50</a> &nbsp;•&nbsp;
                                     784 points
                                 </span>
@@ -568,7 +568,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16671944">186 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rhapsodic">rhapsodic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521981944"
                                        class="submissionTimestamp">2018-03-25 12:45:44</a> &nbsp;•&nbsp;
                                     781 points
                                 </span>
@@ -589,7 +589,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16912546">741 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=fuzzygroup">fuzzygroup</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524577931"
                                        class="submissionTimestamp">2018-04-24 13:52:11</a> &nbsp;•&nbsp;
                                     772 points
                                 </span>
@@ -640,8 +640,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
