--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -190,7 +190,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16647445">191 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=reddotX">reddotX</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521715587"
                                        class="submissionTimestamp">2018-03-22 10:46:27</a> &nbsp;•&nbsp;
                                     697 points
                                 </span>
@@ -211,7 +211,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17043629">316 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=clumsysmurf">clumsysmurf</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525993095"
                                        class="submissionTimestamp">2018-05-10 22:58:15</a> &nbsp;•&nbsp;
                                     691 points
                                 </span>
@@ -232,7 +232,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16663475">518 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Shivetya">Shivetya</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521846819"
                                        class="submissionTimestamp">2018-03-23 23:13:39</a> &nbsp;•&nbsp;
                                     691 points
                                 </span>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16652952">426 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=fahd777">fahd777</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521754739"
                                        class="submissionTimestamp">2018-03-22 21:38:59</a> &nbsp;•&nbsp;
                                     691 points
                                 </span>
@@ -274,7 +274,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16933265">153 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524759583"
                                        class="submissionTimestamp">2018-04-26 16:19:43</a> &nbsp;•&nbsp;
                                     690 points
                                 </span>
@@ -295,7 +295,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16907298">349 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=neflabs">neflabs</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524516917"
                                        class="submissionTimestamp">2018-04-23 20:55:17</a> &nbsp;•&nbsp;
                                     687 points
                                 </span>
@@ -316,7 +316,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16685452">243 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=weinzierl">weinzierl</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522127631"
                                        class="submissionTimestamp">2018-03-27 05:13:51</a> &nbsp;•&nbsp;
                                     685 points
                                 </span>
@@ -337,7 +337,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16620454">172 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rock57">rock57</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521480189"
                                        class="submissionTimestamp">2018-03-19 17:23:09</a> &nbsp;•&nbsp;
                                     683 points
                                 </span>
@@ -358,7 +358,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16678209">578 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522066086"
                                        class="submissionTimestamp">2018-03-26 12:08:06</a> &nbsp;•&nbsp;
                                     682 points
                                 </span>
@@ -379,7 +379,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17060303">220 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=katpas">katpas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526237127"
                                        class="submissionTimestamp">2018-05-13 18:45:27</a> &nbsp;•&nbsp;
                                     681 points
                                 </span>
@@ -400,7 +400,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16901599">243 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Yossi_Frenkel">Yossi_Frenkel</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524472582"
                                        class="submissionTimestamp">2018-04-23 08:36:22</a> &nbsp;•&nbsp;
                                     677 points
                                 </span>
@@ -421,7 +421,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16626318">231 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=imartin2k">imartin2k</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521525625"
                                        class="submissionTimestamp">2018-03-20 06:00:25</a> &nbsp;•&nbsp;
                                     677 points
                                 </span>
@@ -442,7 +442,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16803874">354 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=panic">panic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1523385376"
                                        class="submissionTimestamp">2018-04-10 18:36:16</a> &nbsp;•&nbsp;
                                     674 points
                                 </span>
@@ -463,7 +463,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16939504">400 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=almost_usual">almost_usual</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524821646"
                                        class="submissionTimestamp">2018-04-27 09:34:06</a> &nbsp;•&nbsp;
                                     673 points
                                 </span>
@@ -484,7 +484,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17060085">437 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526234332"
                                        class="submissionTimestamp">2018-05-13 17:58:52</a> &nbsp;•&nbsp;
                                     668 points
                                 </span>
@@ -505,7 +505,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16706164">348 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=imartin2k">imartin2k</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522323611"
                                        class="submissionTimestamp">2018-03-29 11:40:11</a> &nbsp;•&nbsp;
                                     668 points
                                 </span>
@@ -526,7 +526,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16978932">378 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=vanni">vanni</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525280441"
                                        class="submissionTimestamp">2018-05-02 17:00:41</a> &nbsp;•&nbsp;
                                     662 points
                                 </span>
@@ -547,7 +547,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16989534">462 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525378756"
                                        class="submissionTimestamp">2018-05-03 20:19:16</a> &nbsp;•&nbsp;
                                     661 points
                                 </span>
@@ -568,7 +568,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16874015">997 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=draven">draven</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524123089"
                                        class="submissionTimestamp">2018-04-19 07:31:29</a> &nbsp;•&nbsp;
                                     659 points
                                 </span>
@@ -589,7 +589,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16437452">402 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jacksmith21006">jacksmith21006</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1519307033"
                                        class="submissionTimestamp">2018-02-22 13:43:53</a> &nbsp;•&nbsp;
                                     659 points
                                 </span>
@@ -637,8 +637,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
