--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -190,7 +190,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15092707">183 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hvo">hvo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1503599538"
                                        class="submissionTimestamp">2017-08-24 18:32:18</a> &nbsp;•&nbsp;
                                     848 points
                                 </span>
@@ -211,7 +211,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15624677">344 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hohaa">hohaa</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1509797755"
                                        class="submissionTimestamp">2017-11-04 12:15:55</a> &nbsp;•&nbsp;
                                     845 points
                                 </span>
@@ -232,7 +232,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15451060">328 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=darwhy">darwhy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1507740006"
                                        class="submissionTimestamp">2017-10-11 16:40:06</a> &nbsp;•&nbsp;
                                     841 points
                                 </span>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15435822">150 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=robheaton">robheaton</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1507570759"
                                        class="submissionTimestamp">2017-10-09 17:39:19</a> &nbsp;•&nbsp;
                                     828 points
                                 </span>
@@ -274,7 +274,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16601883">562 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=samaysharma">samaysharma</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521218832"
                                        class="submissionTimestamp">2018-03-16 16:47:12</a> &nbsp;•&nbsp;
                                     827 points
                                 </span>
@@ -295,7 +295,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16340741">294 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jbk">jbk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1518189325"
                                        class="submissionTimestamp">2018-02-09 15:15:25</a> &nbsp;•&nbsp;
                                     827 points
                                 </span>
@@ -316,7 +316,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15331016">231 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=craigcannon">craigcannon</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1506351835"
                                        class="submissionTimestamp">2017-09-25 15:03:55</a> &nbsp;•&nbsp;
                                     825 points
                                 </span>
@@ -337,7 +337,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16188502">238 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mcone">mcone</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1516386692"
                                        class="submissionTimestamp">2018-01-19 18:31:32</a> &nbsp;•&nbsp;
                                     804 points
                                 </span>
@@ -358,7 +358,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16437973">391 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=minimaxir">minimaxir</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1519311854"
                                        class="submissionTimestamp">2018-02-22 15:04:14</a> &nbsp;•&nbsp;
                                     803 points
                                 </span>
@@ -379,7 +379,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16367997">777 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=gregorymichael">gregorymichael</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1518536908"
                                        class="submissionTimestamp">2018-02-13 15:48:28</a> &nbsp;•&nbsp;
                                     803 points
                                 </span>
@@ -400,7 +400,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16768021">158 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=seycombi">seycombi</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522955471"
                                        class="submissionTimestamp">2018-04-05 19:11:11</a> &nbsp;•&nbsp;
                                     801 points
                                 </span>
@@ -421,7 +421,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15694430">258 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=imartin2k">imartin2k</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1510662340"
                                        class="submissionTimestamp">2017-11-14 12:25:40</a> &nbsp;•&nbsp;
                                     795 points
                                 </span>
@@ -442,7 +442,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15904265">522 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=awiesenhofer">awiesenhofer</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1513072653"
                                        class="submissionTimestamp">2017-12-12 09:57:33</a> &nbsp;•&nbsp;
                                     793 points
                                 </span>
@@ -463,7 +463,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16550270">167 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=zdw">zdw</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1520580140"
                                        class="submissionTimestamp">2018-03-09 07:22:20</a> &nbsp;•&nbsp;
                                     792 points
                                 </span>
@@ -484,7 +484,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17181269">212 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=HoppedUpMenace">HoppedUpMenace</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527615386"
                                        class="submissionTimestamp">2018-05-29 17:36:26</a> &nbsp;•&nbsp;
                                     789 points
                                 </span>
@@ -505,7 +505,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16129454">317 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ValentineC">ValentineC</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1515717574"
                                        class="submissionTimestamp">2018-01-12 00:39:34</a> &nbsp;•&nbsp;
                                     788 points
                                 </span>
@@ -526,7 +526,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17097561">116 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rreichman">rreichman</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526603032"
                                        class="submissionTimestamp">2018-05-18 00:23:52</a> &nbsp;•&nbsp;
                                     784 points
                                 </span>
@@ -547,7 +547,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16813796">688 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=navigaid">navigaid</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1523470190"
                                        class="submissionTimestamp">2018-04-11 18:09:50</a> &nbsp;•&nbsp;
                                     784 points
                                 </span>
@@ -568,7 +568,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15820161">223 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=singularity2001">singularity2001</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1512080628"
                                        class="submissionTimestamp">2017-11-30 22:23:48</a> &nbsp;•&nbsp;
                                     782 points
                                 </span>
@@ -589,7 +589,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16671944">186 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rhapsodic">rhapsodic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521981944"
                                        class="submissionTimestamp">2018-03-25 12:45:44</a> &nbsp;•&nbsp;
                                     781 points
                                 </span>
@@ -637,8 +637,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
