--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -190,7 +190,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15694926">813 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=l2dy">l2dy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1510667554"
                                        class="submissionTimestamp">2017-11-14 13:52:34</a> &nbsp;•&nbsp;
                                     1692 points
                                 </span>
@@ -211,7 +211,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15919115">120 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=flor1s">flor1s</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1513212854"
                                        class="submissionTimestamp">2017-12-14 00:54:14</a> &nbsp;•&nbsp;
                                     1656 points
                                 </span>
@@ -232,7 +232,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15237896">674 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=fbnlsr">fbnlsr</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1505308412"
                                        class="submissionTimestamp">2017-09-13 13:13:32</a> &nbsp;•&nbsp;
                                     1653 points
                                 </span>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17081684">625 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=voctor">voctor</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526472110"
                                        class="submissionTimestamp">2018-05-16 12:01:50</a> &nbsp;•&nbsp;
                                     1630 points
                                 </span>
@@ -274,7 +274,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16659180">265 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=runesoerensen">runesoerensen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521819483"
                                        class="submissionTimestamp">2018-03-23 15:38:03</a> &nbsp;•&nbsp;
                                     1543 points
                                 </span>
@@ -295,7 +295,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=14087381">996 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=charlieirish">charlieirish</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1491916539"
                                        class="submissionTimestamp">2017-04-11 13:15:39</a> &nbsp;•&nbsp;
                                     1519 points
                                 </span>
@@ -316,7 +316,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16721690">491 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kawera">kawera</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522469718"
                                        class="submissionTimestamp">2018-03-31 04:15:18</a> &nbsp;•&nbsp;
                                     1501 points
                                 </span>
@@ -337,7 +337,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17099969">481 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=graposaymaname">graposaymaname</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526635913"
                                        class="submissionTimestamp">2018-05-18 09:31:53</a> &nbsp;•&nbsp;
                                     1491 points
                                 </span>
@@ -358,7 +358,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16542395">215 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=shawndumas">shawndumas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1520485315"
                                        class="submissionTimestamp">2018-03-08 05:01:55</a> &nbsp;•&nbsp;
                                     1397 points
                                 </span>
@@ -379,7 +379,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=13426494">558 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=yossorion">yossorion</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1484749936"
                                        class="submissionTimestamp">2017-01-18 14:32:16</a> &nbsp;•&nbsp;
                                     1382 points
                                 </span>
@@ -400,7 +400,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16755530">1061 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=s3r3nity">s3r3nity</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522855070"
                                        class="submissionTimestamp">2018-04-04 15:17:50</a> &nbsp;•&nbsp;
                                     1368 points
                                 </span>
@@ -421,7 +421,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=12686763">127 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=forwidur">forwidur</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1476208385"
                                        class="submissionTimestamp">2016-10-11 17:53:05</a> &nbsp;•&nbsp;
                                     1362 points
                                 </span>
@@ -442,7 +442,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=13909365">860 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=teslacar">teslacar</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1489954513"
                                        class="submissionTimestamp">2017-03-19 20:15:13</a> &nbsp;•&nbsp;
                                     1359 points
                                 </span>
@@ -463,7 +463,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=12944464">576 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Tomte">Tomte</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1479058556"
                                        class="submissionTimestamp">2016-11-13 17:35:56</a> &nbsp;•&nbsp;
                                     1336 points
                                 </span>
@@ -484,7 +484,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=12303075">521 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=knowbody">knowbody</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1471420381"
                                        class="submissionTimestamp">2016-08-17 07:53:01</a> &nbsp;•&nbsp;
                                     1323 points
                                 </span>
@@ -505,7 +505,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17145204">709 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spking">spking</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527177240"
                                        class="submissionTimestamp">2018-05-24 15:54:00</a> &nbsp;•&nbsp;
                                     1312 points
                                 </span>
@@ -526,7 +526,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=12379518">558 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=davidkhess">davidkhess</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1472435880"
                                        class="submissionTimestamp">2016-08-29 01:58:00</a> &nbsp;•&nbsp;
                                     1311 points
                                 </span>
@@ -547,7 +547,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=13862284">237 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kruse-tim">kruse-tim</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1489438696"
                                        class="submissionTimestamp">2017-03-13 20:58:16</a> &nbsp;•&nbsp;
                                     1308 points
                                 </span>
@@ -568,7 +568,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15611122">502 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=livatlantis">livatlantis</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1509635597"
                                        class="submissionTimestamp">2017-11-02 15:13:17</a> &nbsp;•&nbsp;
                                     1307 points
                                 </span>
@@ -589,7 +589,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17163251">194 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527356271"
                                        class="submissionTimestamp">2018-05-26 17:37:51</a> &nbsp;•&nbsp;
                                     1306 points
                                 </span>
@@ -640,8 +640,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
