--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -190,7 +190,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16541415">220 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rpledge">rpledge</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1520471056"
                                        class="submissionTimestamp">2018-03-08 01:04:16</a> &nbsp;•&nbsp;
                                     1018 points
                                 </span>
@@ -211,7 +211,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16922396">544 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=DoreenMichele">DoreenMichele</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524670064"
                                        class="submissionTimestamp">2018-04-25 15:27:44</a> &nbsp;•&nbsp;
                                     1015 points
                                 </span>
@@ -232,7 +232,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=13904881">74 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sebg">sebg</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1489891954"
                                        class="submissionTimestamp">2017-03-19 02:52:34</a> &nbsp;•&nbsp;
                                     1015 points
                                 </span>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=14836653">415 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=posnet">posnet</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1500883412"
                                        class="submissionTimestamp">2017-07-24 08:03:32</a> &nbsp;•&nbsp;
                                     1014 points
                                 </span>
@@ -274,7 +274,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15321015">702 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=raindev">raindev</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1506191931"
                                        class="submissionTimestamp">2017-09-23 18:38:51</a> &nbsp;•&nbsp;
                                     1003 points
                                 </span>
@@ -295,7 +295,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=14090063">235 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ploggingdev">ploggingdev</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1491930378"
                                        class="submissionTimestamp">2017-04-11 17:06:18</a> &nbsp;•&nbsp;
                                     1000 points
                                 </span>
@@ -316,7 +316,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16980292">367 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=antoinefink">antoinefink</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525288857"
                                        class="submissionTimestamp">2018-05-02 19:20:57</a> &nbsp;•&nbsp;
                                     999 points
                                 </span>
@@ -337,7 +337,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16200007">441 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Sandman">Sandman</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1516568477"
                                        class="submissionTimestamp">2018-01-21 21:01:17</a> &nbsp;•&nbsp;
                                     993 points
                                 </span>
@@ -358,7 +358,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16216329">625 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=uptown">uptown</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1516734160"
                                        class="submissionTimestamp">2018-01-23 19:02:40</a> &nbsp;•&nbsp;
                                     989 points
                                 </span>
@@ -379,7 +379,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17102981">143 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ChanningAllen">ChanningAllen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526662548"
                                        class="submissionTimestamp">2018-05-18 16:55:48</a> &nbsp;•&nbsp;
                                     985 points
                                 </span>
@@ -397,12 +397,12 @@
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17189905">460 comments</a> &nbsp;•&nbsp;
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17189905">462 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Mahn">Mahn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527702803"
                                        class="submissionTimestamp">2018-05-30 17:53:23</a> &nbsp;•&nbsp;
-                                    974 points
+                                    976 points
                                 </span>
                             </td>
                         </tr>
@@ -421,7 +421,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17138356">530 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=drexlspivey">drexlspivey</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527110011"
                                        class="submissionTimestamp">2018-05-23 21:13:31</a> &nbsp;•&nbsp;
                                     972 points
                                 </span>
@@ -442,7 +442,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=12269425">184 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=csallen">csallen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1470931956"
                                        class="submissionTimestamp">2016-08-11 16:12:36</a> &nbsp;•&nbsp;
                                     971 points
                                 </span>
@@ -463,7 +463,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16134618">242 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jzoch">jzoch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1515778510"
                                        class="submissionTimestamp">2018-01-12 17:35:10</a> &nbsp;•&nbsp;
                                     967 points
                                 </span>
@@ -484,7 +484,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15306398">249 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1506020560"
                                        class="submissionTimestamp">2017-09-21 19:02:40</a> &nbsp;•&nbsp;
                                     962 points
                                 </span>
@@ -505,7 +505,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=14011793">322 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Hooke">Hooke</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1491049591"
                                        class="submissionTimestamp">2017-04-01 12:26:31</a> &nbsp;•&nbsp;
                                     959 points
                                 </span>
@@ -526,7 +526,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16654698">595 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=cft">cft</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521773352"
                                        class="submissionTimestamp">2018-03-23 02:49:12</a> &nbsp;•&nbsp;
                                     947 points
                                 </span>
@@ -547,7 +547,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=14612680">310 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=interpol_p">interpol_p</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1498143635"
                                        class="submissionTimestamp">2017-06-22 15:00:35</a> &nbsp;•&nbsp;
                                     944 points
                                 </span>
@@ -568,7 +568,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=14807779">724 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=campbelltown">campbelltown</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1500497424"
                                        class="submissionTimestamp">2017-07-19 20:50:24</a> &nbsp;•&nbsp;
                                     943 points
                                 </span>
@@ -589,7 +589,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16160394">193 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tomcam">tomcam</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1516125924"
                                        class="submissionTimestamp">2018-01-16 18:05:24</a> &nbsp;•&nbsp;
                                     938 points
                                 </span>
@@ -637,8 +637,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
