--- a/jobs/index.html
+++ b/jobs/index.html
@@ -161,6 +161,27 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://www.givecampus.com/careers#product">GiveCampus (YC S15) is hiring a Director of Product to advance education</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17194230">None comments</a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=mkong1">mkong1</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527745710"
+                                       class="submissionTimestamp">2018-05-31 05:48:30</a> &nbsp;•&nbsp;
+                                    1 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://clever.com/about/jobs/software-engineer#gh_jid=5889">Clever (YC S12) is hiring engineers to help change education</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -168,7 +189,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17193473">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=greattypo">greattypo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527732968"
                                        class="submissionTimestamp">2018-05-31 02:16:08</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -189,7 +210,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17192594">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kevinredman">kevinredman</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527720780"
                                        class="submissionTimestamp">2018-05-30 22:53:00</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -210,7 +231,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17190809">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=christianpbrink">christianpbrink</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527708038"
                                        class="submissionTimestamp">2018-05-30 19:20:38</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -231,7 +252,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17188625">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mthomasb">mthomasb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527695018"
                                        class="submissionTimestamp">2018-05-30 15:43:38</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -252,7 +273,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17186947">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=justin">justin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527681446"
                                        class="submissionTimestamp">2018-05-30 11:57:26</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -273,7 +294,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17185947">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kohnke">kohnke</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527667596"
                                        class="submissionTimestamp">2018-05-30 08:06:36</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -294,7 +315,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17185030">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=irvinglin">irvinglin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527653745"
                                        class="submissionTimestamp">2018-05-30 04:15:45</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -315,7 +336,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17184080">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jstreebin">jstreebin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527641834"
                                        class="submissionTimestamp">2018-05-30 00:57:14</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -336,7 +357,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17183106">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=amirmanji">amirmanji</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527629922"
                                        class="submissionTimestamp">2018-05-29 21:38:42</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -357,7 +378,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17181472">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=the_economist">the_economist</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527616624"
                                        class="submissionTimestamp">2018-05-29 17:57:04</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -378,7 +399,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17174122">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=OlgaVidisheva">OlgaVidisheva</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527534082"
                                        class="submissionTimestamp">2018-05-28 19:01:22</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -399,7 +420,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17170479">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dariaevdo">dariaevdo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527478946"
                                        class="submissionTimestamp">2018-05-28 03:42:26</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -420,7 +441,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17169659">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=iEchoic">iEchoic</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527462879"
                                        class="submissionTimestamp">2018-05-27 23:14:39</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -441,7 +462,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17167585">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thedogeye">thedogeye</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527437946"
                                        class="submissionTimestamp">2018-05-27 16:19:06</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -462,7 +483,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17166704">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jayzee">jayzee</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527425757"
                                        class="submissionTimestamp">2018-05-27 12:55:57</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -483,7 +504,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17166178">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=yunhakim">yunhakim</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527413015"
                                        class="submissionTimestamp">2018-05-27 09:23:35</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -504,7 +525,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17165500">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=nimz">nimz</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527397226"
                                        class="submissionTimestamp">2018-05-27 05:00:26</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -525,7 +546,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17165018">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sajithw">sajithw</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527383929"
                                        class="submissionTimestamp">2018-05-27 01:18:49</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -546,29 +567,8 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17164449">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=arram">arram</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527371464"
                                        class="submissionTimestamp">2018-05-26 21:51:04</a> &nbsp;•&nbsp;
-                                    1 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://www.streak.com/careers#ProductEngineer">Streak (YC S11) Is Hiring Product Engineers</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17163526">None comments</a> &nbsp;•&nbsp;
-                                    <strong><a
-                                            href="https://news.ycombinator.com/user?id=alooPotato">alooPotato</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
-                                       class="submissionTimestamp">2018-05-26 18:23:18</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -611,8 +611,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
