--- a/jobs/page3.html
+++ b/jobs/page3.html
@@ -161,6 +161,27 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://angel.co/upcall/jobs">Upcall (YC W17) Is Hiring for Sales – Human Phone Call API</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17105450">None comments</a> &nbsp;•&nbsp;
+                                    <strong><a
+                                            href="https://news.ycombinator.com/user?id=leahcim">leahcim</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1526682927"
+                                       class="submissionTimestamp">2018-05-18 22:35:27</a> &nbsp;•&nbsp;
+                                    1 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://mino-games.workable.com/jobs/415887">Mino Games Is Hiring Programmers in Montreal</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -168,7 +189,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17104088">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=joshbuckley">joshbuckley</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526670461"
                                        class="submissionTimestamp">2018-05-18 19:07:41</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -189,7 +210,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17102202">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hirokitakeuchi">hirokitakeuchi</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526657131"
                                        class="submissionTimestamp">2018-05-18 15:25:31</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -210,7 +231,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17100309">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=irvinglin">irvinglin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526639956"
                                        class="submissionTimestamp">2018-05-18 10:39:16</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -231,7 +252,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17099116">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tyoung">tyoung</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526624442"
                                        class="submissionTimestamp">2018-05-18 06:20:42</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -252,7 +273,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17098202">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mkong1">mkong1</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526610591"
                                        class="submissionTimestamp">2018-05-18 02:29:51</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -273,7 +294,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17094302">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tarof">tarof</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526583168"
                                        class="submissionTimestamp">2018-05-17 18:52:48</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -294,7 +315,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17091301">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=eliam2">eliam2</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526565993"
                                        class="submissionTimestamp">2018-05-17 14:06:33</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -315,7 +336,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17089918">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=thebent">thebent</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526549373"
                                        class="submissionTimestamp">2018-05-17 09:29:33</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -336,7 +357,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17088814">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hwong">hwong</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526532752"
                                        class="submissionTimestamp">2018-05-17 04:52:32</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -357,7 +378,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17087911">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dlau">dlau</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526520287"
                                        class="submissionTimestamp">2018-05-17 01:24:47</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -378,7 +399,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17086784">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=christinac">christinac</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526507343"
                                        class="submissionTimestamp">2018-05-16 21:49:03</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -399,7 +420,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17084689">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=michaelbsimon">michaelbsimon</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526493216"
                                        class="submissionTimestamp">2018-05-16 17:53:36</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -420,7 +441,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17081807">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jondishotsky">jondishotsky</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526473552"
                                        class="submissionTimestamp">2018-05-16 12:25:52</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -441,7 +462,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17080763">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jkottapa">jkottapa</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526458317"
                                        class="submissionTimestamp">2018-05-16 08:11:57</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -462,7 +483,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17080049">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spinwang">spinwang</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526445574"
                                        class="submissionTimestamp">2018-05-16 04:39:34</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -483,7 +504,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17079223">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Nimble2017">Nimble2017</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526432832"
                                        class="submissionTimestamp">2018-05-16 01:07:12</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -504,7 +525,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17078170">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=sytse">sytse</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526420920"
                                        class="submissionTimestamp">2018-05-15 21:48:40</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -525,7 +546,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17074108">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=reham">reham</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526394324"
                                        class="submissionTimestamp">2018-05-15 14:25:24</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
@@ -546,29 +567,8 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17070264">None comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=greattypo">greattypo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526339746"
                                        class="submissionTimestamp">2018-05-14 23:15:46</a> &nbsp;•&nbsp;
-                                    1 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://www.themuse.com/jobs/themuse/qa-lead-335af6">The  Muse (YC W12) Is Hiring a QA Lead – Help 50M People Find Career Alignment</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17063678">None comments</a> &nbsp;•&nbsp;
-                                    <strong><a
-                                            href="https://news.ycombinator.com/user?id=KMinshew">KMinshew</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
-                                       class="submissionTimestamp">2018-05-14 08:01:30</a> &nbsp;•&nbsp;
                                     1 points
                                 </span>
                             </td>
@@ -616,8 +616,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
