--- a/top_stories/daily/index.html
+++ b/top_stories/daily/index.html
@@ -190,7 +190,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16582136">436 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Cogito">Cogito</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1520999430"
                                        class="submissionTimestamp">2018-03-14 03:50:30</a> &nbsp;•&nbsp;
                                     6015 points
                                 </span>
@@ -211,7 +211,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16619917">1766 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kgwgk">kgwgk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521478042"
                                        class="submissionTimestamp">2018-03-19 16:47:22</a> &nbsp;•&nbsp;
                                     2361 points
                                 </span>
@@ -232,7 +232,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16877395">441 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spullara">spullara</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524156117"
                                        class="submissionTimestamp">2018-04-19 16:41:57</a> &nbsp;•&nbsp;
                                     2136 points
                                 </span>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17015661">309 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=weatherlight">weatherlight</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525721051"
                                        class="submissionTimestamp">2018-05-07 19:24:11</a> &nbsp;•&nbsp;
                                     2074 points
                                 </span>
@@ -274,7 +274,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16493489">222 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=matant">matant</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1519922390"
                                        class="submissionTimestamp">2018-03-01 16:39:50</a> &nbsp;•&nbsp;
                                     1926 points
                                 </span>
@@ -295,7 +295,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16727869">657 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=satysin">satysin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522584865"
                                        class="submissionTimestamp">2018-04-01 12:14:25</a> &nbsp;•&nbsp;
                                     1895 points
                                 </span>
@@ -316,7 +316,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17022963">750 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ivank">ivank</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525801904"
                                        class="submissionTimestamp">2018-05-08 17:51:44</a> &nbsp;•&nbsp;
                                     1875 points
                                 </span>
@@ -337,7 +337,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16483241">751 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mtlynch">mtlynch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1519828685"
                                        class="submissionTimestamp">2018-02-28 14:38:05</a> &nbsp;•&nbsp;
                                     1767 points
                                 </span>
@@ -358,7 +358,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17081684">625 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=voctor">voctor</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526472110"
                                        class="submissionTimestamp">2018-05-16 12:01:50</a> &nbsp;•&nbsp;
                                     1630 points
                                 </span>
@@ -379,7 +379,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16659180">265 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=runesoerensen">runesoerensen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521819483"
                                        class="submissionTimestamp">2018-03-23 15:38:03</a> &nbsp;•&nbsp;
                                     1543 points
                                 </span>
@@ -400,7 +400,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16721690">491 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kawera">kawera</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522469718"
                                        class="submissionTimestamp">2018-03-31 04:15:18</a> &nbsp;•&nbsp;
                                     1501 points
                                 </span>
@@ -421,7 +421,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17099969">481 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=graposaymaname">graposaymaname</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526635913"
                                        class="submissionTimestamp">2018-05-18 09:31:53</a> &nbsp;•&nbsp;
                                     1491 points
                                 </span>
@@ -442,7 +442,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16542395">215 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=shawndumas">shawndumas</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1520485315"
                                        class="submissionTimestamp">2018-03-08 05:01:55</a> &nbsp;•&nbsp;
                                     1397 points
                                 </span>
@@ -463,7 +463,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16755530">1061 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=s3r3nity">s3r3nity</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522855070"
                                        class="submissionTimestamp">2018-04-04 15:17:50</a> &nbsp;•&nbsp;
                                     1368 points
                                 </span>
@@ -484,7 +484,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17145204">709 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spking">spking</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527177240"
                                        class="submissionTimestamp">2018-05-24 15:54:00</a> &nbsp;•&nbsp;
                                     1312 points
                                 </span>
@@ -505,7 +505,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17163251">194 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ingve">ingve</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527356271"
                                        class="submissionTimestamp">2018-05-26 17:37:51</a> &nbsp;•&nbsp;
                                     1306 points
                                 </span>
@@ -526,7 +526,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17044518">229 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bobross">bobross</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526004788"
                                        class="submissionTimestamp">2018-05-11 02:13:08</a> &nbsp;•&nbsp;
                                     1304 points
                                 </span>
@@ -547,7 +547,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16862925">394 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=aaossa">aaossa</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524004872"
                                        class="submissionTimestamp">2018-04-17 22:41:12</a> &nbsp;•&nbsp;
                                     1274 points
                                 </span>
@@ -568,7 +568,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16802530">400 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dsr12">dsr12</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1523377264"
                                        class="submissionTimestamp">2018-04-10 16:21:04</a> &nbsp;•&nbsp;
                                     1264 points
                                 </span>
@@ -589,7 +589,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16970199">496 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jboynyc">jboynyc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525200901"
                                        class="submissionTimestamp">2018-05-01 18:55:01</a> &nbsp;•&nbsp;
                                     1224 points
                                 </span>
@@ -634,8 +634,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
