--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -190,7 +190,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16582136">436 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Cogito">Cogito</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1520999430"
                                        class="submissionTimestamp">2018-03-14 03:50:30</a> &nbsp;•&nbsp;
                                     6015 points
                                 </span>
@@ -211,7 +211,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16319505">872 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1517950635"
                                        class="submissionTimestamp">2018-02-06 20:57:15</a> &nbsp;•&nbsp;
                                     2968 points
                                 </span>
@@ -232,7 +232,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15278883">978 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=guelo">guelo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1505763908"
                                        class="submissionTimestamp">2017-09-18 19:45:08</a> &nbsp;•&nbsp;
                                     2735 points
                                 </span>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16619917">1766 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kgwgk">kgwgk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521478042"
                                        class="submissionTimestamp">2018-03-19 16:47:22</a> &nbsp;•&nbsp;
                                     2361 points
                                 </span>
@@ -274,7 +274,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16877395">441 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=spullara">spullara</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524156117"
                                        class="submissionTimestamp">2018-04-19 16:41:57</a> &nbsp;•&nbsp;
                                     2136 points
                                 </span>
@@ -295,7 +295,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17015661">309 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=weatherlight">weatherlight</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525721051"
                                        class="submissionTimestamp">2018-05-07 19:24:11</a> &nbsp;•&nbsp;
                                     2074 points
                                 </span>
@@ -316,7 +316,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15940144">874 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=Sir_Cmpwn">Sir_Cmpwn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1513441000"
                                        class="submissionTimestamp">2017-12-16 16:16:40</a> &nbsp;•&nbsp;
                                     2023 points
                                 </span>
@@ -337,7 +337,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15965653">609 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=rafaelc">rafaelc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1513727477"
                                        class="submissionTimestamp">2017-12-19 23:51:17</a> &nbsp;•&nbsp;
                                     1960 points
                                 </span>
@@ -358,7 +358,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16493489">222 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=matant">matant</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1519922390"
                                        class="submissionTimestamp">2018-03-01 16:39:50</a> &nbsp;•&nbsp;
                                     1926 points
                                 </span>
@@ -379,7 +379,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16727869">657 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=satysin">satysin</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522584865"
                                        class="submissionTimestamp">2018-04-01 12:14:25</a> &nbsp;•&nbsp;
                                     1895 points
                                 </span>
@@ -400,7 +400,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17022963">750 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ivank">ivank</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525801904"
                                        class="submissionTimestamp">2018-05-08 17:51:44</a> &nbsp;•&nbsp;
                                     1875 points
                                 </span>
@@ -421,7 +421,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16483241">751 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mtlynch">mtlynch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1519828685"
                                        class="submissionTimestamp">2018-02-28 14:38:05</a> &nbsp;•&nbsp;
                                     1767 points
                                 </span>
@@ -442,7 +442,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15752022">572 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1511301725"
                                        class="submissionTimestamp">2017-11-21 22:02:05</a> &nbsp;•&nbsp;
                                     1720 points
                                 </span>
@@ -463,7 +463,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15694926">813 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=l2dy">l2dy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1510667554"
                                        class="submissionTimestamp">2017-11-14 13:52:34</a> &nbsp;•&nbsp;
                                     1692 points
                                 </span>
@@ -484,7 +484,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15919115">120 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=flor1s">flor1s</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1513212854"
                                        class="submissionTimestamp">2017-12-14 00:54:14</a> &nbsp;•&nbsp;
                                     1656 points
                                 </span>
@@ -505,7 +505,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15237896">674 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=fbnlsr">fbnlsr</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1505308412"
                                        class="submissionTimestamp">2017-09-13 13:13:32</a> &nbsp;•&nbsp;
                                     1653 points
                                 </span>
@@ -526,7 +526,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17081684">625 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=voctor">voctor</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526472110"
                                        class="submissionTimestamp">2018-05-16 12:01:50</a> &nbsp;•&nbsp;
                                     1630 points
                                 </span>
@@ -547,7 +547,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16659180">265 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=runesoerensen">runesoerensen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521819483"
                                        class="submissionTimestamp">2018-03-23 15:38:03</a> &nbsp;•&nbsp;
                                     1543 points
                                 </span>
@@ -568,7 +568,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16721690">491 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=kawera">kawera</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522469718"
                                        class="submissionTimestamp">2018-03-31 04:15:18</a> &nbsp;•&nbsp;
                                     1501 points
                                 </span>
@@ -589,7 +589,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17099969">481 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=graposaymaname">graposaymaname</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526635913"
                                        class="submissionTimestamp">2018-05-18 09:31:53</a> &nbsp;•&nbsp;
                                     1491 points
                                 </span>
@@ -634,8 +634,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
