--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -190,7 +190,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16654698">595 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=cft">cft</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1521773352"
                                        class="submissionTimestamp">2018-03-23 02:49:12</a> &nbsp;•&nbsp;
                                     947 points
                                 </span>
@@ -211,7 +211,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16160394">193 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=tomcam">tomcam</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1516125924"
                                        class="submissionTimestamp">2018-01-16 18:05:24</a> &nbsp;•&nbsp;
                                     938 points
                                 </span>
@@ -232,7 +232,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15787023">84 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=federicoponzi">federicoponzi</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1511788530"
                                        class="submissionTimestamp">2017-11-27 13:15:30</a> &nbsp;•&nbsp;
                                     937 points
                                 </span>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17036221">264 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ryan_j_naughton">ryan_j_naughton</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525924010"
                                        class="submissionTimestamp">2018-05-10 03:46:50</a> &nbsp;•&nbsp;
                                     915 points
                                 </span>
@@ -274,7 +274,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16997272">384 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ndiscussion">ndiscussion</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525460392"
                                        class="submissionTimestamp">2018-05-04 18:59:52</a> &nbsp;•&nbsp;
                                     910 points
                                 </span>
@@ -295,7 +295,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15591441">625 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=indy">indy</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1509431211"
                                        class="submissionTimestamp">2017-10-31 06:26:51</a> &nbsp;•&nbsp;
                                     910 points
                                 </span>
@@ -316,7 +316,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16796127">243 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=TD-Linux">TD-Linux</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1523301968"
                                        class="submissionTimestamp">2018-04-09 19:26:08</a> &nbsp;•&nbsp;
                                     909 points
                                 </span>
@@ -337,7 +337,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16959188">435 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=dirtyaura">dirtyaura</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525101015"
                                        class="submissionTimestamp">2018-04-30 15:10:15</a> &nbsp;•&nbsp;
                                     904 points
                                 </span>
@@ -358,7 +358,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16356397">430 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=acjohnson55">acjohnson55</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1518407543"
                                        class="submissionTimestamp">2018-02-12 03:52:23</a> &nbsp;•&nbsp;
                                     900 points
                                 </span>
@@ -379,7 +379,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16698932">287 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=zapita">zapita</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1522253490"
                                        class="submissionTimestamp">2018-03-28 16:11:30</a> &nbsp;•&nbsp;
                                     898 points
                                 </span>
@@ -400,7 +400,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16912679">343 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=jstanley">jstanley</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1524578911"
                                        class="submissionTimestamp">2018-04-24 14:08:31</a> &nbsp;•&nbsp;
                                     895 points
                                 </span>
@@ -421,7 +421,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17057596">240 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=signa11">signa11</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526192686"
                                        class="submissionTimestamp">2018-05-13 06:24:46</a> &nbsp;•&nbsp;
                                     892 points
                                 </span>
@@ -442,9 +442,9 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17184054">451 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=wei_jok">wei_jok</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1527641541"
                                        class="submissionTimestamp">2018-05-30 00:52:21</a> &nbsp;•&nbsp;
-                                    882 points
+                                    883 points
                                 </span>
                             </td>
                         </tr>
@@ -463,7 +463,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16975096">593 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=muszc-master">muszc-master</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1525250907"
                                        class="submissionTimestamp">2018-05-02 08:48:27</a> &nbsp;•&nbsp;
                                     874 points
                                 </span>
@@ -484,7 +484,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=16818593">295 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=lnguyen">lnguyen</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1523516239"
                                        class="submissionTimestamp">2018-04-12 06:57:19</a> &nbsp;•&nbsp;
                                     874 points
                                 </span>
@@ -505,7 +505,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15704730">223 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=hswolff">hswolff</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1510762074"
                                        class="submissionTimestamp">2017-11-15 16:07:54</a> &nbsp;•&nbsp;
                                     873 points
                                 </span>
@@ -526,7 +526,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=17099484">799 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=grabeh">grabeh</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1526630342"
                                        class="submissionTimestamp">2018-05-18 07:59:02</a> &nbsp;•&nbsp;
                                     863 points
                                 </span>
@@ -547,7 +547,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15031922">1526 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=SamWhited">SamWhited</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1502922910"
                                        class="submissionTimestamp">2017-08-16 22:35:10</a> &nbsp;•&nbsp;
                                     857 points
                                 </span>
@@ -568,7 +568,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15448996">275 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=networked">networked</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1507723132"
                                        class="submissionTimestamp">2017-10-11 11:58:52</a> &nbsp;•&nbsp;
                                     856 points
                                 </span>
@@ -589,7 +589,7 @@
                                     <a class="node" href="https://news.ycombinator.com/item?id=15309393">291 comments</a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=miqkt">miqkt</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp=""
+                                    <a data-timestamp="1506054487"
                                        class="submissionTimestamp">2017-09-22 04:28:07</a> &nbsp;•&nbsp;
                                     853 points
                                 </span>
@@ -640,8 +640,8 @@
         <div class="inner">
             <div class="sep10"></div>
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
-            <strong class="fr" data-timestamp="1527745496" id="pageUpdateTimestamp">Last update
-                1527745496</strong>
+            <strong class="fr" data-timestamp="1527745804" id="pageUpdateTimestamp">Last update
+                1527745804</strong>
         </div>
     </div>
 </div>
